--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function(){
+     emailjs.init("YOUR_PUBLIC_KEY");  // Replace with your actual public key
+  })();
+</script>
   </body>
 </html>
